--- a/index.html
+++ b/index.html
@@ -4,10 +4,35 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/1a8486ce17.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="style.css">
         <title>DigitalOcean</title>
     </head>
     <body>
-
+        <header>
+            <div id="nav-top">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <div class="pull-left">
+                                <a href="#">
+                                    <span>new</span>
+                                    <p>
+                                        Scale your business, not costs by running your apps on DigitalOcean <i class="fas fa-greater-than"></i>
+                                    </p>
+                                </a>
+                            </div>
+                            <div class="pull-right">
+                                <a href="#">Blog</a>
+                                <a href="#">Docs</a>
+                                <a href="#">Get Support</a>
+                                <a href="#">Sales</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </header>
     </body>
 </html>
