--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700;900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/1a8486ce17.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="style.css">
         <title>DigitalOcean</title>
@@ -101,6 +101,38 @@
             </nav>
         </header>
 
+        <div class="jumbotron">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12 col-md-6">
+                        <div class="intro">
+                            <h1>Welcome to the developer cloud</h1>
+                            <p>
+                                We make it simple to launch in the cloud and scale up as you grow – with an intuitive control panel, predictable pricing, team accounts, and more.
+                            </p>
+                        </div>
+                    </div>
 
+                    <div class="col-xs-12 col-md-5 col-md-offset-1 col-lg-4 col-lg-offset-2">
+                        <div class="sign-up-box">
+                            <h4>Deploy in seconds</h4>
+                            <div class="main">
+                                <form>
+                                    <input type="text" placeholder="First Name">
+                                    <input type="text" placeholder="Email Adress">
+                                    <input type="text" placeholder="Password">
+                                    <button type="button" class="btn btn-default">Sign up with email</button>
+                                </form>
+                            </div>
+                            <div class="footer clearfix">
+                                <button type="button" class="btn btn-default pull-left"><i class="fab fa-google"></i> <span>Sign up with Google</span> </button>
+                                <button type="button" class="btn btn-default pull-left"><i class="fab fa-github"></i></button>
+                            </div>
+                        </div>
+                        <p class="terms-service"> <small>By signing up you agree to the <a href="#">Terms of Service</a>.</small> </p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
