Completata sezione "features"

--- a/index.html
+++ b/index.html
@@ -188,5 +188,90 @@
                 </div>
             </div>
         </section>
+
+        <section id="features">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12 col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
+                        <div class="intro">
+                            <h2>Deploy and scale seamlessly</h2>
+                            <p>
+                                Our optimized configuration process saves your team time when running and scaling distributed applications, AI & machine learning workloads, hosted services, client websites, or CI/CD environments.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-xs-12 col-sm-2">
+                        <ul>
+                            <li>
+                                <a href="#">Deploy</a>
+                            </li>
+                            <li>
+                                <a href="#">Scale</a>
+                            </li>
+                            <li>
+                                <a href="#">Store</a>
+                            </li>
+                            <li>
+                                <a href="#">Secure</a>
+                            </li>
+                            <li>
+                                <a href="#">Monitor</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="col-xs-12 col-sm-9 col-sm-offset-1">
+                        <div class="row">
+                            <div class="col-xs-12 col-sm-6">
+                                <div class="feature">
+                                    <img src="https://prismic-io.s3.amazonaws.com/www-static/16ae92b4-6939-446c-b6a3-0ffec01cdc14_kublogoicon.svg" alt="">
+                                    <h5>Kubernetes in minutes</h5>
+                                    <p>
+                                        Spin up a managed Kubernetes cluster in just a few clicks. Simply specify the size and location of your worker nodes.
+                                    </p>
+                                </div>
+                            </div>
+
+                            <div class="col-xs-12 col-sm-6">
+                                <div class="feature">
+                                    <img src="https://prismic-io.s3.amazonaws.com/www-static/936bb585-99ba-460d-ae2f-7bbdae8896cc_stacksplusicon.svg" alt="">
+                                    <h5>1-Click App Marketplace</h5>
+                                    <p>
+                                        Quickly deploy projects using one of our preconfigured 1-Click Apps, like LAMP, Docker, and WordPress.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-xs-12 col-sm-6">
+                                <div class="feature">
+                                    <img src="https://prismic-io.s3.amazonaws.com/www-static/9d343e9c-fe74-4979-8ad9-e8efc58d6ee7_dropletinboxicon.svg" alt="">
+                                    <h5>Flexible compute types</h5>
+                                    <p>
+                                        With Basic, General Purpose, CPU-Optimized or Memory-Optimized Droplets, you can choose the right infrastructure for your workload.
+                                    </p>
+                                </div>
+                            </div>
+
+                            <div class="col-xs-12 col-sm-6">
+                                <div class="feature">
+                                    <img src="https://prismic-io.s3.amazonaws.com/www-static/0eee6655-dfce-46b2-ab48-f40ff27d8a73_globeicon.svg" alt="">
+                                    <h5>Global availability</h5>
+                                    <p>
+                                        Deploy to any of our data center locations – New York, SF, London, Amsterdam, Bangalore, and more.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+        </section>
     </body>
 </html>
