Completata sezione "developers"

--- a/index.html
+++ b/index.html
@@ -273,5 +273,39 @@
                 </div>
             </div>
         </section>
+
+        <section id="developers">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12 col-md-10 col-md-offset-1">
+                        <div class="intro">
+                            <h2>Designed for developers</h2>
+                            <p>
+                                Build more and spend less time managing your infrastructure with our easy-to-use control panel and API.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-xs-12">
+                        <div class="carousel">
+                            <img src="https://images.prismic.io/www-static/ba01040c-a47a-43c9-995d-4ed05a5dc4c9_screenshot-create-kubernetes-cluster-4a930955.jpg?auto=compress,format" alt="">
+                            <p>
+                                Use Kubernetes to improve availability, scalability, and resource efficiency of your containerized applications.
+                            </p>
+                            <div class="circles">
+                                <span class="circle"></span>
+                                <span class="circle"></span>
+                                <span class="circle"></span>
+                                <span class="circle"></span>
+                                <span class="circle"></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </body>
 </html>
