--- a/index.html
+++ b/index.html
@@ -237,10 +237,10 @@
 
                             <div class="col-xs-12 col-sm-6">
                                 <div class="feature">
-                                    <img src="https://prismic-io.s3.amazonaws.com/www-static/936bb585-99ba-460d-ae2f-7bbdae8896cc_stacksplusicon.svg" alt="">
-                                    <h5>1-Click App Marketplace</h5>
+                                    <img src="https://prismic-io.s3.amazonaws.com/www-static/9d343e9c-fe74-4979-8ad9-e8efc58d6ee7_dropletinboxicon.svg" alt="">
+                                    <h5>Flexible compute types</h5>
                                     <p>
-                                        Quickly deploy projects using one of our preconfigured 1-Click Apps, like LAMP, Docker, and WordPress.
+                                        With Basic, General Purpose, CPU-Optimized or Memory-Optimized Droplets, you can choose the right infrastructure for your workload.
                                     </p>
                                 </div>
                             </div>
@@ -249,10 +249,10 @@
                         <div class="row">
                             <div class="col-xs-12 col-sm-6">
                                 <div class="feature">
-                                    <img src="https://prismic-io.s3.amazonaws.com/www-static/9d343e9c-fe74-4979-8ad9-e8efc58d6ee7_dropletinboxicon.svg" alt="">
-                                    <h5>Flexible compute types</h5>
+                                    <img src="https://prismic-io.s3.amazonaws.com/www-static/936bb585-99ba-460d-ae2f-7bbdae8896cc_stacksplusicon.svg" alt="">
+                                    <h5>1-Click App Marketplace</h5>
                                     <p>
-                                        With Basic, General Purpose, CPU-Optimized or Memory-Optimized Droplets, you can choose the right infrastructure for your workload.
+                                        Quickly deploy projects using one of our preconfigured 1-Click Apps, like LAMP, Docker, and WordPress.
                                     </p>
                                 </div>
                             </div>
@@ -304,6 +304,66 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <section id="info">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <div class="intro">
+                            <h2>Built for business</h2>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-xs-12 col-md-3">
+                        <div class="feature">
+                            <img src="https://prismic-io.s3.amazonaws.com/www-static/7531f96f-5414-42c2-ba65-0d705769c62f_icon-check-shield.svg" alt="">
+                            <h5>Reliable platform</h5>
+                            <p>
+                                More than 100,000 developer teams worldwide trust DigitalOcean to support their business with a 99.99% uptime SLA for all services.
+                            </p>
+                            <a href="#">Security <i class="fas fa-greater-than"></i></a>
+                        </div>
+                    </div>
+
+                    <div class="col-xs-12 col-md-3">
+                        <div class="feature">
+                            <img src="https://prismic-io.s3.amazonaws.com/www-static/4083b409-5e65-4403-86a8-7ed8f501a0d8_icon-task-list-multiple.svg" alt="">
+                            <h5>Predictable pricing</h5>
+                            <p>
+                                Leave complex pricing structures behind. Always know what you’ll pay per month with a flat, industry-leading pricing structure.
+                            </p>
+                            <a href="#">Pricing <i class="fas fa-greater-than"></i></a>
+                        </div>
+                    </div>
+
+                    <div class="col-xs-12 col-md-3">
+                        <div class="feature">
+                            <img src="https://prismic-io.s3.amazonaws.com/www-static/fccb0e1b-4de3-4b58-9f3e-5455f5c3aeae_icon-headphones-customer-support-human.svg" alt="">
+                            <h5>World-class service</h5>
+                            <p>
+                                Free around-the-clock technical support for all customers, with additional benefits for premium support subscribers. You’ll feel the love.
+                            </p>
+                            <a href="#">Support <i class="fas fa-greater-than"></i></a>
+                        </div>
+                    </div>
+
+                    <div class="col-xs-12 col-md-3">
+                        <div class="feature last">
+                            <img src="https://prismic-io.s3.amazonaws.com/www-static/1c791b14-833f-4190-a865-a55e11055fc0_icon-certified-certificate.svg" alt="">
+                            <h5>Security and compliance</h5>
+                            <p>
+                                Keep your data protected. Our platform is certified on multiple international standards, including SOC 1 Type II, SOC 2 Type II, ISO/IEC 27001, and PCI-DSS.
+                            </p>
+                            <a href="#">Compliance <i class="fas fa-greater-than"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
         </section>
 
