--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
         <section id="developers">
             <div class="container">
                 <div class="row">
-                    <div class="col-xs-12 col-md-10 col-md-offset-1">
+                    <div class="col-xs-12 col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
                         <div class="intro">
                             <h2>Designed for developers</h2>
                             <p>
@@ -310,7 +310,7 @@
         <section id="info">
             <div class="container">
                 <div class="row">
-                    <div class="col-xs-12">
+                    <div class="col-xs-12 col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
                         <div class="intro">
                             <h2>Built for business</h2>
                         </div>
@@ -362,8 +362,329 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
 
+        <section id="data">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12 col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
+                        <div class="intro">
+                            <h2>Service your customers around the world from 13 data centers.</h2>
+                            <p>
+                                Run your infrastructure near your customers. Industry-low <a href="#">bandwidth pricing</a>, with generous quotas and add-on transfer at just $.01/GiB, makes DigitalOcean perfect for network-heavy apps like VPN and video.
+                            </p>
+                        </div>
+                    </div>
+                </div>
 
+                <div id="table" class="row">
+                    <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-12 col-md-offset-0">
+                        <div class="row">
+                            <div class="col-xs-12 col-md-6">
+                                <div class="row">
+                                    <div class="col-xs-3 col-sm-2">
+                                        <div class="cell left">
+                                            ams2
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-4 col-sm-6">
+                                        <div class="cell center">
+                                            Amsterdam, Netherlands
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-5 col-sm-4">
+                                        <div class="cell right text-right">
+                                            <a href="#">Test Speed <i class="fas fa-greater-than"></i> </a>
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-12">
+                                        <hr>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-md-6">
+                                <div class="row">
+                                    <div class="col-xs-3 col-sm-2">
+                                        <div class="cell left">
+                                            ams3
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-4 col-sm-6">
+                                        <div class="cell center">
+                                            Amsterdam, Netherlands
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-5 col-sm-4">
+                                        <div class="cell right text-right">
+                                            <a href="#">Test Speed <i class="fas fa-greater-than"></i> </a>
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-12">
+                                        <hr>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-xs-12 col-md-6">
+                                <div class="row">
+                                    <div class="col-xs-3 col-sm-2">
+                                        <div class="cell left">
+                                            blr1
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-4 col-sm-6">
+                                        <div class="cell center">
+                                            Bangalore, India
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-5 col-sm-4">
+                                        <div class="cell right text-right">
+                                            <a href="#">Test Speed <i class="fas fa-greater-than"></i> </a>
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-12">
+                                        <hr>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-md-6">
+                                <div class="row">
+                                    <div class="col-xs-3 col-sm-2">
+                                        <div class="cell left">
+                                            fra1
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-4 col-sm-6">
+                                        <div class="cell center">
+                                            Frankfurt, Germany
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-5 col-sm-4">
+                                        <div class="cell right text-right">
+                                            <a href="#">Test Speed <i class="fas fa-greater-than"></i> </a>
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-12">
+                                        <hr>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-xs-12 col-md-6">
+                                <div class="row">
+                                    <div class="col-xs-3 col-sm-2">
+                                        <div class="cell left">
+                                            lon1
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-4 col-sm-6">
+                                        <div class="cell center">
+                                            London, UK
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-5 col-sm-4">
+                                        <div class="cell right text-right">
+                                            <a href="#">Test Speed <i class="fas fa-greater-than"></i> </a>
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-12">
+                                        <hr>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-md-6">
+                                <div class="row">
+                                    <div class="col-xs-3 col-sm-2">
+                                        <div class="cell left">
+                                            nyc1
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-4 col-sm-6">
+                                        <div class="cell center">
+                                            New York, NY
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-5 col-sm-4">
+                                        <div class="cell right text-right">
+                                            <a href="#">Test Speed <i class="fas fa-greater-than"></i> </a>
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-12">
+                                        <hr>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-xs-12 col-md-6">
+                                <div class="row">
+                                    <div class="col-xs-3 col-sm-2">
+                                        <div class="cell left">
+                                            nyc2
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-4 col-sm-6">
+                                        <div class="cell center">
+                                            New York, NY
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-5 col-sm-4">
+                                        <div class="cell right text-right">
+                                            <a href="#">Test Speed <i class="fas fa-greater-than"></i> </a>
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-12">
+                                        <hr>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-md-6">
+                                <div class="row">
+                                    <div class="col-xs-3 col-sm-2">
+                                        <div class="cell left">
+                                            nyc3
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-4 col-sm-6">
+                                        <div class="cell center">
+                                            New York, NY
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-5 col-sm-4">
+                                        <div class="cell right text-right">
+                                            <a href="#">Test Speed <i class="fas fa-greater-than"></i> </a>
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-12">
+                                        <hr>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-xs-12 col-md-6">
+                                <div class="row">
+                                    <div class="col-xs-3 col-sm-2">
+                                        <div class="cell left">
+                                            sfo1
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-4 col-sm-6">
+                                        <div class="cell center">
+                                            San Francisco, CA
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-5 col-sm-4">
+                                        <div class="cell right text-right">
+                                            <a href="#">Test Speed <i class="fas fa-greater-than"></i> </a>
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-12">
+                                        <hr>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-md-6">
+                                <div class="row">
+                                    <div class="col-xs-3 col-sm-2">
+                                        <div class="cell left">
+                                            sfo2
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-4 col-sm-6">
+                                        <div class="cell center">
+                                            San Francisco, CA
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-5 col-sm-4">
+                                        <div class="cell right text-right">
+                                            <a href="#">Test Speed <i class="fas fa-greater-than"></i> </a>
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-12">
+                                        <hr>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-xs-12 col-md-6">
+                                <div class="row">
+                                    <div class="col-xs-3 col-sm-2">
+                                        <div class="cell left">
+                                            sfo3
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-4 col-sm-6">
+                                        <div class="cell center">
+                                            San Francisco, CA
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-5 col-sm-4">
+                                        <div class="cell right text-right">
+                                            <a href="#">Test Speed <i class="fas fa-greater-than"></i> </a>
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-12">
+                                        <hr>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-md-6">
+                                <div class="row">
+                                    <div class="col-xs-3 col-sm-2">
+                                        <div class="cell left">
+                                            sgp1
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-4 col-sm-6">
+                                        <div class="cell center">
+                                            Singapore
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-5 col-sm-4">
+                                        <div class="cell right text-right">
+                                            <a href="#">Test Speed <i class="fas fa-greater-than"></i> </a>
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-12">
+                                        <hr class="last">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-xs-12 col-md-6">
+                                <div class="row">
+                                    <div class="col-xs-3 col-sm-2">
+                                        <div class="cell left">
+                                            tor1
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-4 col-sm-6">
+                                        <div class="cell center">
+                                            Toronto, Canada
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-5 col-sm-4">
+                                        <div class="cell right text-right">
+                                            <a href="#">Test Speed <i class="fas fa-greater-than"></i> </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
