--- a/index.html
+++ b/index.html
@@ -726,5 +726,23 @@
                 </div>
             </div>
         </section>
+
+        <section id="cta">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12 col-md-6">
+                        <div class="left">
+                            <h2>Get started now</h2>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-md-6">
+                        <div class="right">
+                            <button type="button" class="btn btn-default">Create your account</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </body>
 </html>
