--- a/index.html
+++ b/index.html
@@ -268,8 +268,6 @@
                             </div>
                         </div>
                     </div>
-
-
                 </div>
             </div>
         </section>
@@ -744,5 +742,124 @@
             </div>
         </section>
 
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <div class="menu clearfix">
+                            <div class="sub-menu pull-left">
+                                <h6>Company</h6>
+                                <ul>
+                                    <li> <a href="#">About</a> </li>
+                                    <li> <a href="#">Leadership</a> </li>
+                                    <li> <a href="#">Blog</a> </li>
+                                    <li> <a href="#">Careers</a> </li>
+                                    <li> <a href="#">Partners</a> </li>
+                                    <li> <a href="#">Referral Program</a> </li>
+                                    <li> <a href="#">Press</a> </li>
+                                    <li> <a href="#">Legal</a> </li>
+                                    <li> <a href="#">Trust Platform</a> </li>
+                                </ul>
+                            </div>
+
+                            <div class="sub-menu pull-left">
+                                <h6>Products</h6>
+                                <ul>
+                                    <li> <a href="#">Products Overview</a> </li>
+                                    <li> <a href="#">Droplets</a> </li>
+                                    <li> <a href="#">Kubernetes</a> </li>
+                                    <li> <a href="#">Managed Databases</a> </li>
+                                    <li> <a href="#">Spaces</a> </li>
+                                    <li> <a href="#">Marketplace</a> </li>
+                                    <li> <a href="#">Load Balancers</a> </li>
+                                    <li> <a href="#">Block Storage</a> </li>
+                                    <li> <a href="#">Tools & Integrations</a> </li>
+                                    <li> <a href="#">API</a> </li>
+                                    <li> <a href="#">Pricing</a> </li>
+                                    <li> <a href="#">Documentation</a> </li>
+                                    <li> <a href="#">Release Notes</a> </li>
+                                </ul>
+                            </div>
+
+                            <div class="sub-menu pull-left">
+                                <h6>Community</h6>
+                                <ul>
+                                    <li> <a href="#">Tutorials</a> </li>
+                                    <li> <a href="#">Meetups</a> </li>
+                                    <li> <a href="#">Q&A</a> </li>
+                                    <li> <a href="#">Write for DOnations</a> </li>
+                                    <li> <a href="#">Droplets for Demos</a> </li>
+                                    <li> <a href="#">Hatch Startup Program</a> </li>
+                                    <li> <a href="#">Shop Swag</a> </li>
+                                    <li> <a href="#">Research Program</a> </li>
+                                    <li> <a href="#">Currents Research</a> </li>
+                                    <li> <a href="#">Open Source</a> </li>
+                                </ul>
+                            </div>
+
+                            <div class="sub-menu pull-left">
+                                <h6>Solutions</h6>
+                                <ul>
+                                    <li> <a href="#">Web & Mobile Apps</a> </li>
+                                    <li> <a href="#">Website Hosting</a> </li>
+                                    <li> <a href="#">Game Development</a> </li>
+                                    <li> <a href="#">Streaming</a> </li>
+                                    <li> <a href="#">VPN</a> </li>
+                                    <li> <a href="#">Startups</a> </li>
+                                    <li> <a href="#">SaaS Solutions</a> </li>
+                                    <li> <a href="#">Agency & Web Dev Shops</a> </li>
+                                    <li> <a href="#">Managed Cloud Hosting Providers</a> </li>
+                                    <li> <a href="#">Big Data</a> </li>
+                                    <li> <a href="#">Business Solutions</a> </li>
+                                </ul>
+                            </div>
+
+                            <div class="sub-menu pull-left">
+                                <h6>Contact</h6>
+                                <ul>
+                                    <li> <a href="#">Support</a> </li>
+                                    <li> <a href="#">Sales</a> </li>
+                                    <li> <a href="#">Report Abuse</a> </li>
+                                    <li> <a href="#">System Status</a> </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-xs-12">
+                        <hr>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-xs-12 col-sm-7">
+                        <div class="bottom-left clearfix">
+                            <div class="logo pull-left">
+                                <img src="https://prismic-io.s3.amazonaws.com/www-static%2F903fd83b-8963-42c2-baf6-44f4d6bb83f2_digitalocean-logo-mark.svg" alt="">
+                            </div>
+                            <div class="copyright pull-left">
+                                <p>
+                                    © 2020 DigitalOcean, LLC. All rights reserved.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-5">
+                        <div class="bottom-right">
+                            <a href="#"><i class="fab fa-twitter"></i></a>
+                            <a href="#"><i class="fab fa-facebook-square"></i></a>
+                            <a href="#"><i class="fab fa-instagram"></i></a>
+                            <a href="#"><i class="fab fa-youtube"></i></a>
+                            <a href="#"><i class="fab fa-linkedin"></i></a>
+                            <a href="#"><i class="fab fa-dev"></i></a>
+                            <a href="#"><i class="fab fa-google-plus-g"></i></a>
+                            <a href="#"><i class="fab fa-github"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
