Perfezionati navbar, jumbotron e footer

--- a/index.html
+++ b/index.html
@@ -882,8 +882,8 @@
                             <a href="#"><i class="fab fa-youtube"></i></a>
                             <a href="#"><i class="fab fa-linkedin"></i></a>
                             <a href="#"><i class="fab fa-dev"></i></a>
-                            <a href="#"><i class="fab fa-google-plus-g"></i></a>
-                            <a href="#"><i class="fab fa-github"></i></a>
+                            <a href="#"><img src="https://prismic-io.s3.amazonaws.com/www-static%2F83dade92-59bc-4d80-88e4-3ef53aacb10d_glassdoor.svg"></a>
+                            <a href="#"><img src="https://prismic-io.s3.amazonaws.com/www-static/0a7d85b2-1cce-492a-83fb-652b3cdcaf5a_builtin.svg"></a>
                         </div>
                     </div>
                 </div>
